1.1:
    • Vim runtime files:
      - renamed :mksyntax to :mkvimruntime which now generates
        all Vim related files.
      - Vimball packages are no longer available.
    • Removed <F1> and <A-F1> mappings.

1.0:
    • Extensive Firefox 4 support, including:
      - Fully restartless. Can now be installed, uninstalled,
        enabled, disabled, and upgraded without restarting Firefox.
        [b4]
      - Tabs in :buffer completions and listings are grouped
        by panorama groups. [b1]
      - Only visible tabs are considered in tab numbering,
        n_gt, n_gn, etc. [b1]
    • Performance improvements:
      - Improved startup time by a factor of 7. [b1]
      - Further improved startup time. [b6]
      - Significant completion speed improvements, especially for
        JavaScript. [b1]
    • Added site-local and script-local groups: [b6]
      - Added the :group command to define and select groups.
      - Added the -group flag to :abbreviate, :autocmd, :command,
        :map, :style, and friends.
      - Mappings and commands can now be bound to groups which
        execute only for certain websites.
      - Autocommands, commands, mappings, and styles are now
        automatically added to per-script groups so that most traces
        of a script can be easily purged.
    • Greatly improved private mode support and :sanitize command.
      - Full integration with Firefox data clearing dialogs. [b3]
      - Support for sanitizing items at shutdown. [b3]
      - Fine-grained control over what data is sanitized and for
        what timespan. [b1]
      - Support for sanitizing reference to particular hosts,
        everywhere from command-line and message history to option
        values and cookies. [b1]
    • New and much more powerful incremental search implementation.
      Improvements over the standard Firefox find include:
      - Starts at the cursor position in the currently selected